fixed contrast issue.

--- a/client/less/theme.less
+++ b/client/less/theme.less
@@ -112,7 +112,6 @@ h1, h2 {
 
     &.panel-default {
         border-color: transparent;
-        opacity: 0.8;
 
         .panel-heading {
             background-color: transparent;
